# TAC-Trabalho-final-BT

./: .gitignore  BT  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  approach_object.cpp  auth_nurse.cpp  bt.cpp  bt_executor.cpp  check_battery.cpp  cmake_install.cmake  exercicio.xml  my_tree.xml  read_barcode.cpp  your_project_name
